@@ -6,8 +6,8 @@ import java.util.List;
 import net.minecraft.src.Config;
 
 public class NativeMemory {
-   private static LongSupplier bufferAllocatedSupplier = makeLongSupplier(new String[][]{{"sun.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}, {"jdk.internal.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}});
-   private static LongSupplier bufferMaximumSupplier = makeLongSupplier(new String[][]{{"sun.misc.VM", "maxDirectMemory"}, {"jdk.internal.misc.VM", "maxDirectMemory"}});
+   private static final LongSupplier bufferAllocatedSupplier = makeLongSupplier(new String[][]{{"sun.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}, {"jdk.internal.misc.SharedSecrets", "getJavaNioAccess", "getDirectBufferPool", "getMemoryUsed"}});
+   private static final LongSupplier bufferMaximumSupplier = makeLongSupplier(new String[][]{{"sun.misc.VM", "maxDirectMemory"}, {"jdk.internal.misc.VM", "maxDirectMemory"}});
 
    public static long getBufferAllocated() {
       return bufferAllocatedSupplier == null?-1L:bufferAllocatedSupplier.getAsLong();
@@ -43,14 +43,14 @@ public class NativeMemory {
          return null;
       } else {
          Class oclass = Class.forName(path[0]);
-         Method method = oclass.getMethod(path[1], new Class[0]);
+         Method method = oclass.getMethod(path[1]);
          method.setAccessible(true);
          Object object = null;
 
          for(int i = 2; i < path.length; ++i) {
             String s = path[i];
-            object = method.invoke(object, new Object[0]);
-            method = object.getClass().getMethod(s, new Class[0]);
+            object = method.invoke(object);
+            method = object.getClass().getMethod(s);
             method.setAccessible(true);
          }
 
